--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>The asile</title>
-    <link rel="shotricon" href="./images/section-title-img-1.png" type="image/x-icon">
+    <link rel="shorticon" href="./images/section-title-img-1.png" type="image/x-icon">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/index.css">
 
